fake-recruiter-detector/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-recruiter-ingress
  namespace: fake-recruiter-detector
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /analyze
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
